[package]
name = "humantime-serde"
version = "1.1.1"
authors = ["jean-airoldie <maxence.caron@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Serde support for the `humantime` crate"
repository = "https://github.com/jean-airoldie/humantime-serde"
readme = "README.md"
keywords = ["serde", "humantime", "time", "duration"]

[dependencies]
humantime = {git = "https://github.com/jayakasadev/humantime", rev = "b9786ec7f8ea9c08425e1e2982047cbe9841bdf9", default-features = false}
serde = { version = "1.0", features = ["derive"] }
time = {version = "0.3", default-features = false}

[dev-dependencies]
serde_json = "1.0"
version-sync = "0.9"
