[package]
name = "humantime-serde"
version = "1.1.1"
authors = ["jean-airoldie <maxence.caron@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Serde support for the `humantime` crate"
repository = "https://github.com/jean-airoldie/humantime-serde"
readme = "README.md"
keywords = ["serde", "humantime", "time", "duration"]

[dependencies]
humantime = {git = "https://github.com/jayakasadev/humantime", rev = "03e5044ae7ee7f2e3322478ca79db79d2b886950", default-features = false}
serde = { version = "1.0", features = ["derive"] }
chrono = {version = "0.4", default-features = false, features = ["alloc", "rkyv"]}


[dev-dependencies]
serde_json = "1.0"
version-sync = "0.9"

[lints.clippy]
std_instead_of_core = "forbid"
std_instead_of_alloc = "forbid"